fix bumps