@@ -2,16 +2,16 @@ scalaVersion := "3.3.1"
 
 libraryDependencies ++= Seq(
   "com.softwaremill.ox" %% "core" % "0.0.13",
-  "com.softwaremill.sttp.client3" %% "core" % "3.8.16",
-  "org.scalatest" %% "scalatest" % "3.2.16" % Test,
+  "com.softwaremill.sttp.client3" %% "core" % "3.9.0",
+  "org.scalatest" %% "scalatest" % "3.2.17" % Test,
   "org.slf4j" % "slf4j-simple" % "2.0.9" % Test,
-  "com.dimafeng" %% "testcontainers-scala-core" % "0.40.12" % Test
+  "com.dimafeng" %% "testcontainers-scala-core" % "0.41.0" % Test
 )
 
 fork := true
 
 Test / fork := true
 
-javacOptions += "--enable-preview --add-modules jdk.incubator.concurrent"
+javacOptions += "--enable-preview"
 
-javaOptions ++= Seq("--enable-preview", "--add-modules", "jdk.incubator.concurrent")
+javaOptions += "--enable-preview"
